--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "simplesoftwareio/simple-qrcode": "~4",
         "spatie/laravel-permission": "^6.4",
         "stripe/stripe-php": "^14.1"
     },
