--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "stripe/stripe-php": "^14.1"
     },
     "require-dev": {
+        "beyondcode/laravel-er-diagram-generator": "^3.0",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.28",
         "laravel/pint": "^1.0",
